# advent2022

./: .gitignore  Cargo.toml  fullrun.sh  run.sh  sample.sh  test.sh
src/: 10a.rs  10b.rs  11a.rs  11b.rs  12a.rs  12b.rs  13a.rs  13b.rs  14a.rs  14b.rs  15a.rs  15b.rs  16a.rs  16b.rs  17a.rs  17b.rs  18a.rs  18b.rs  19a.rs  19b.rs  1a.rs  1b.rs  20a.rs  20b.rs  21a.rs  21b.rs  22a.rs  22b.rs  23a.rs  23b.rs  24a.rs  24b.rs  25a.rs  2a.rs  2b.rs  3a.rs  3b.rs  4a.rs  4b.rs  5a.rs  (+9 more)
