[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1a"
path = "src/1a.rs"

[[bin]]
name = "1b"
path = "src/1b.rs"

[[bin]]
name = "2a"
path = "src/2a.rs"

[[bin]]
name = "2b"
path = "src/2b.rs"

[[bin]]
name = "3a"
path = "src/3a.rs"

[[bin]]
name = "3b"
path = "src/3b.rs"

[[bin]]
name = "4a"
path = "src/4a.rs"

[[bin]]
name = "4b"
path = "src/4b.rs"

[[bin]]
name = "5a"
path = "src/5a.rs"

[[bin]]
name = "5b"
path = "src/5b.rs"

[[bin]]
name = "6a"
path = "src/6a.rs"

[[bin]]
name = "6b"
path = "src/6b.rs"

[[bin]]
name = "7a"
path = "src/7a.rs"

[[bin]]
name = "7b"
path = "src/7b.rs"

[[bin]]
name = "8a"
path = "src/8a.rs"

[[bin]]
name = "8b"
path = "src/8b.rs"

[[bin]]
name = "9a"
path = "src/9a.rs"

[[bin]]
name = "9b"
path = "src/9b.rs"

[[bin]]
name = "10a"
path = "src/10a.rs"

[[bin]]
name = "10b"
path = "src/10b.rs"

[[bin]]
name = "11a"
path = "src/11a.rs"
