[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "1a"
path = "src/1a.rs"

[[bin]]
name = "1b"
path = "src/1b.rs"

[[bin]]
name = "2a"
path = "src/2a.rs"

[[bin]]
name = "2b"
path = "src/2b.rs"

[[bin]]
name = "3a"
path = "src/3a.rs"

[[bin]]
name = "3b"
path = "src/3b.rs"

[[bin]]
name = "4a"
path = "src/4a.rs"

[[bin]]
name = "4b"
path = "src/4b.rs"

[[bin]]
name = "5a"
path = "src/5a.rs"

[[bin]]
name = "5b"
path = "src/5b.rs"

[[bin]]
name = "6a"
path = "src/6a.rs"

[[bin]]
name = "6b"
path = "src/6b.rs"

[[bin]]
name = "7a"
path = "src/7a.rs"

[[bin]]
name = "7b"
path = "src/7b.rs"

[[bin]]
name = "8a"
path = "src/8a.rs"

[[bin]]
name = "8b"
path = "src/8b.rs"

[[bin]]
name = "9a"
path = "src/9a.rs"

[[bin]]
name = "9b"
path = "src/9b.rs"

[[bin]]
name = "10a"
path = "src/10a.rs"

[[bin]]
name = "10b"
path = "src/10b.rs"

[[bin]]
name = "11a"
path = "src/11a.rs"

[[bin]]
name = "11b"
path = "src/11b.rs"

[[bin]]
name = "12a"
path = "src/12a.rs"

[[bin]]
name = "12b"
path = "src/12b.rs"

[[bin]]
name = "13a"
path = "src/13a.rs"

[[bin]]
name = "13b"
path = "src/13b.rs"

[[bin]]
name = "14a"
path = "src/14a.rs"

[[bin]]
name = "14b"
path = "src/14b.rs"

[[bin]]
name = "15a"
path = "src/15a.rs"

[[bin]]
name = "15b"
path = "src/15b.rs"

[[bin]]
name = "16a"
path = "src/16a.rs"

[[bin]]
name = "16b"
path = "src/16b.rs"

[[bin]]
name = "17a"
path = "src/17a.rs"

[[bin]]
name = "17b"
path = "src/17b.rs"

[[bin]]
name = "18a"
path = "src/18a.rs"

[[bin]]
name = "18b"
path = "src/18b.rs"

[[bin]]
name = "19a"
path = "src/19a.rs"

[[bin]]
name = "19b"
path = "src/19b.rs"

[[bin]]
name = "20a"
path = "src/20a.rs"

[[bin]]
name = "20b"
path = "src/20b.rs"

[[bin]]
name = "21a"
path = "src/21a.rs"

[[bin]]
name = "21b"
path = "src/21b.rs"

[[bin]]
name = "22a"
path = "src/22a.rs"

[[bin]]
name = "22b"
path = "src/22b.rs"

[[bin]]
name = "23a"
path = "src/23a.rs"
